All_Component_DX/force-app/main/default/objects/PM_Coverage__c/PM_Coverage__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Preventive Maintenance Plans for various customer contracts and automatically initiating execution of such maintenance plans using work orders</description>
    <label>Preventive Maintenance Coverage</label>
    <nameField>
        <displayFormat>PMC-{00000000}</displayFormat>
        <label>PM Coverage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preventive Maintenance Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>