All_Component_DX/force-app/main/default/objects/PM_Coverage__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Name</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Preventive Maintenance Coverages</relationshipLabel>
    <relationshipName>Preventive_Maintenance_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>