All_Component_DX/force-app/main/default/objects/PM_Coverage__c/fields/Next_PM_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Next_PM_Cycle__c</fullName>
    <description>The counter reading on which the next preventive maintenance cycle will kick in</description>
    <label>Next PM Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>