All_Component_DX/force-app/main/default/objects/PM_Coverage__c/fields/PM_Cycle_Type__c.field-meta.xml
<CustomField>
    <fullName>PM_Cycle_Type__c</fullName>
    <description>Flag indicates how the next PM cycle reading should be calculated upon completion of preventive maintenance. Increment will increase the next cycle by frequency. Roundoff will set it to the next multiple of frequency</description>
    <label>PM Cycle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increment</fullName>
            </value>
            <value>
                <fullName>Roundoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>