All_Component_DX/force-app/main/default/objects/PM_Coverage__c/fields/PM_Frequency__c.field-meta.xml
<CustomField>
    <fullName>PM_Frequency__c</fullName>
    <description>Frequency of preventive maintenance based on counter reading</description>
    <label>PM Frequency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>