All_Component_DX/force-app/main/default/objects/PM_Coverage__c/fields/PM_Limit__c.field-meta.xml
<CustomField>
    <fullName>PM_Limit__c</fullName>
    <description>Maximum limit for preventive maintenance based on counter reading</description>
    <label>PM Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>