All_Component_DX/force-app/main/default/objects/PM_Coverage__c/fields/PM_Plan__c.field-meta.xml
<CustomField>
    <fullName>PM_Plan__c</fullName>
    <description>Preventive Maintenance Plan for which coverage is defined. Reference to an existing PM Plan in ServiceMax</description>
    <label>Preventive Maintenance Plan</label>
    <referenceTo>PM_Plan__c</referenceTo>
    <relationshipLabel>Preventive Maintenance Coverages</relationshipLabel>
    <relationshipName>PM_Coverage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>