All_Component_DX/force-app/main/default/objects/PM_Coverage__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Installed Product</description>
    <label>Product Name</label>
    <referenceTo>Installed_Product__c</referenceTo>
    <relationshipLabel>Preventive Maintenance Coverages</relationshipLabel>
    <relationshipName>PM_Coverage</relationshipName>
    <type>Lookup</type>
</CustomField>