All_Component_DX/force-app/main/default/objects/PM_Coverage__c/fields/SM_Advanced_Expression__c.field-meta.xml
<CustomField>
    <fullName>SM_Advanced_Expression__c</fullName>
    <description>Advanced expressions for condition rules for every coverage record</description>
    <inlineHelpText>Advanced expressions for condition rules for every coverage record</inlineHelpText>
    <label>Advanced Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>